--- a/BaseDebug/LogWidget.ui
+++ b/BaseDebug/LogWidget.ui
@@ -45,8 +45,8 @@
       <string/>
      </property>
      <property name="icon">
-      <iconset resource="../../seer/src/resource.qrc">
-       <normaloff>:/seer/resources/RelaxLightIcons/edit-clear.svg</normaloff>:/seer/resources/RelaxLightIcons/edit-clear.svg</iconset>
+      <iconset resource="../SeeDataStructureRc.qrc">
+       <normaloff>:/resources/RelaxLightIcons/edit-clear.svg</normaloff>:/resources/RelaxLightIcons/edit-clear.svg</iconset>
      </property>
     </widget>
    </item>
@@ -62,8 +62,8 @@
       <string/>
      </property>
      <property name="icon">
-      <iconset resource="../../seer/src/resource.qrc">
-       <normaloff>:/seer/resources/RelaxLightIcons/document-print.svg</normaloff>:/seer/resources/RelaxLightIcons/document-print.svg</iconset>
+      <iconset resource="../SeeDataStructureRc.qrc">
+       <normaloff>:/resources/RelaxLightIcons/document-print.svg</normaloff>:/resources/RelaxLightIcons/document-print.svg</iconset>
      </property>
     </widget>
    </item>
@@ -79,8 +79,8 @@
       <string/>
      </property>
      <property name="icon">
-      <iconset resource="../../seer/src/resource.qrc">
-       <normaloff>:/seer/resources/RelaxLightIcons/document-save-as.svg</normaloff>:/seer/resources/RelaxLightIcons/document-save-as.svg</iconset>
+      <iconset resource="../SeeDataStructureRc.qrc">
+       <normaloff>:/resources/RelaxLightIcons/document-save-as.svg</normaloff>:/resources/RelaxLightIcons/document-save-as.svg</iconset>
      </property>
     </widget>
    </item>
@@ -126,7 +126,7 @@
   </layout>
  </widget>
  <resources>
-  <include location="../../seer/src/resource.qrc"/>
+  <include location="../SeeDataStructureRc.qrc"/>
  </resources>
  <connections/>
 </ui>
