--- a/sdsmainwindow.ui
+++ b/sdsmainwindow.ui
@@ -6,17 +6,476 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>600</height>
+    <width>984</width>
+    <height>628</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>sdsMainWindow</string>
+   <string>See Your DataStructure</string>
   </property>
-  <widget class="QWidget" name="centralwidget"/>
-  <widget class="QMenuBar" name="menubar"/>
+  <widget class="GdbWidget" name="gdbWidget"/>
+  <widget class="QMenuBar" name="menubar">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>984</width>
+     <height>26</height>
+    </rect>
+   </property>
+   <widget class="QMenu" name="menuFile">
+    <property name="title">
+     <string>File</string>
+    </property>
+    <addaction name="actionFileDebug"/>
+    <addaction name="actionFileArguments"/>
+    <addaction name="actionFileQuit"/>
+   </widget>
+   <widget class="QMenu" name="menuEdit">
+    <property name="title">
+     <string>Edit</string>
+    </property>
+   </widget>
+   <widget class="QMenu" name="menuView">
+    <property name="title">
+     <string>View</string>
+    </property>
+    <widget class="QMenu" name="menuConsole">
+     <property name="toolTip">
+      <string/>
+     </property>
+     <property name="statusTip">
+      <string/>
+     </property>
+     <property name="title">
+      <string>Console</string>
+     </property>
+     <property name="icon">
+      <iconset>
+       <normaloff>:/seer/resources/console.png</normaloff>:/seer/resources/console.png</iconset>
+     </property>
+     <addaction name="actionConsoleNormal"/>
+     <addaction name="actionConsoleMinimized"/>
+     <addaction name="actionConsoleHidden"/>
+    </widget>
+    <addaction name="actionViewMemoryVisualizer"/>
+    <addaction name="actionViewArrayVisualizer"/>
+    <addaction name="menuConsole"/>
+   </widget>
+   <widget class="QMenu" name="menuSettings">
+    <property name="title">
+     <string>Settings</string>
+    </property>
+    <addaction name="actionSettingsConfiguration"/>
+    <addaction name="actionSettingsSaveConfiguration"/>
+   </widget>
+   <widget class="QMenu" name="menuHelp">
+    <property name="title">
+     <string>Help</string>
+    </property>
+    <addaction name="actionHelpAbout"/>
+   </widget>
+   <widget class="QMenu" name="menuControl">
+    <property name="title">
+     <string>Control</string>
+    </property>
+    <addaction name="actionControlRun"/>
+    <addaction name="actionControlStart"/>
+    <addaction name="actionControlContinue"/>
+    <addaction name="actionControlNext"/>
+    <addaction name="actionControlStep"/>
+    <addaction name="actionControlFinish"/>
+    <addaction name="separator"/>
+    <addaction name="actionControlInterrupt"/>
+   </widget>
+   <addaction name="menuFile"/>
+   <addaction name="menuEdit"/>
+   <addaction name="menuControl"/>
+   <addaction name="menuView"/>
+   <addaction name="menuSettings"/>
+   <addaction name="menuHelp"/>
+  </widget>
   <widget class="QStatusBar" name="statusbar"/>
+  <widget class="QToolBar" name="toolBar">
+   <property name="windowTitle">
+    <string>toolBar</string>
+   </property>
+   <property name="toolButtonStyle">
+    <enum>Qt::ToolButtonTextBesideIcon</enum>
+   </property>
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
+   <addaction name="actionGdbRun"/>
+   <addaction name="actionGdbStart"/>
+   <addaction name="actionGdbContinue"/>
+   <addaction name="actionGdbNext"/>
+   <addaction name="actionGdbStep"/>
+   <addaction name="actionGdbFinish"/>
+   <addaction name="separator"/>
+   <addaction name="actionInterruptProcess"/>
+   <addaction name="separator"/>
+   <addaction name="actionMemoryVisualizer"/>
+   <addaction name="actionArrayVisualizer"/>
+  </widget>
+  <action name="actionGdbQuit">
+   <property name="text">
+    <string>Quit</string>
+   </property>
+   <property name="toolTip">
+    <string>Exit GDB.</string>
+   </property>
+  </action>
+  <action name="actionFileQuit">
+   <property name="icon">
+    <iconset resource="SeeDataStructureRc.qrc">
+     <normaloff>:/resources/exit.png</normaloff>:/resources/exit.png</iconset>
+   </property>
+   <property name="text">
+    <string>Quit</string>
+   </property>
+   <property name="toolTip">
+    <string>Quit</string>
+   </property>
+   <property name="statusTip">
+    <string>Quit the  Seer debugger.</string>
+   </property>
+  </action>
+  <action name="actionGdbStart">
+   <property name="icon">
+    <iconset resource="SeeDataStructureRc.qrc">
+     <normaloff>:/resources/restart.png</normaloff>:/resources/restart.png</iconset>
+   </property>
+   <property name="text">
+    <string>Start</string>
+   </property>
+  </action>
+  <action name="actionGdbRun">
+   <property name="icon">
+    <iconset resource="SeeDataStructureRc.qrc">
+     <normaloff>:/resources/restart.png</normaloff>:/resources/restart.png</iconset>
+   </property>
+   <property name="text">
+    <string>Run</string>
+   </property>
+  </action>
+  <action name="actionGdbNext">
+   <property name="icon">
+    <iconset resource="SeeDataStructureRc.qrc">
+     <normaloff>:/resources/step_over.png</normaloff>:/resources/step_over.png</iconset>
+   </property>
+   <property name="text">
+    <string>Next</string>
+   </property>
+  </action>
+  <action name="actionGdbStep">
+   <property name="icon">
+    <iconset resource="SeeDataStructureRc.qrc">
+     <normaloff>:/resources/step_into.png</normaloff>:/resources/step_into.png</iconset>
+   </property>
+   <property name="text">
+    <string>Step</string>
+   </property>
+  </action>
+  <action name="actionGdbFinish">
+   <property name="icon">
+    <iconset resource="SeeDataStructureRc.qrc">
+     <normaloff>:/resources/step_out.png</normaloff>:/resources/step_out.png</iconset>
+   </property>
+   <property name="text">
+    <string>Finish</string>
+   </property>
+  </action>
+  <action name="actionGdbContinue">
+   <property name="icon">
+    <iconset resource="SeeDataStructureRc.qrc">
+     <normaloff>:/resources/continue.png</normaloff>:/resources/continue.png</iconset>
+   </property>
+   <property name="text">
+    <string>Continue</string>
+   </property>
+  </action>
+  <action name="actionFileDebug">
+   <property name="icon">
+    <iconset resource="SeeDataStructureRc.qrc">
+     <normaloff>:/resources/debug.png</normaloff>:/resources/debug.png</iconset>
+   </property>
+   <property name="text">
+    <string>Debug...</string>
+   </property>
+   <property name="toolTip">
+    <string>Debug</string>
+   </property>
+   <property name="statusTip">
+    <string>Load an executable to debug.</string>
+   </property>
+  </action>
+  <action name="actionFileArguments">
+   <property name="icon">
+    <iconset resource="SeeDataStructureRc.qrc">
+     <normaloff>:/resources/arguments.png</normaloff>:/resources/arguments.png</iconset>
+   </property>
+   <property name="text">
+    <string>Arguments...</string>
+   </property>
+   <property name="toolTip">
+    <string>Arguments</string>
+   </property>
+   <property name="statusTip">
+    <string>Specify new arguments to the current executable.</string>
+   </property>
+  </action>
+  <action name="actionInterruptProcess">
+   <property name="icon">
+    <iconset resource="SeeDataStructureRc.qrc">
+     <normaloff>:/resources/stop.png</normaloff>:/resources/stop.png</iconset>
+   </property>
+   <property name="text">
+    <string>Interrupt</string>
+   </property>
+   <property name="toolTip">
+    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Send a 'Terminate' signal to the process.&lt;br/&gt;&lt;br/&gt;Hold down for alternate signals.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+   </property>
+  </action>
+  <action name="actionHelpAbout">
+   <property name="icon">
+    <iconset>
+     <normaloff>:/seer/resources/seer_32x32.png</normaloff>:/seer/resources/seer_32x32.png</iconset>
+   </property>
+   <property name="text">
+    <string>About Seer</string>
+   </property>
+   <property name="statusTip">
+    <string>About Seer</string>
+   </property>
+  </action>
+  <action name="actionMemoryVisualizer">
+   <property name="icon">
+    <iconset resource="SeeDataStructureRc.qrc">
+     <normaloff>:/resources/memory.png</normaloff>:/resources/memory.png</iconset>
+   </property>
+   <property name="text">
+    <string>Memory</string>
+   </property>
+   <property name="toolTip">
+    <string>Launch a blank Memory Visualizer.</string>
+   </property>
+  </action>
+  <action name="actionArrayVisualizer">
+   <property name="icon">
+    <iconset resource="SeeDataStructureRc.qrc">
+     <normaloff>:/resources/array.png</normaloff>:/resources/array.png</iconset>
+   </property>
+   <property name="text">
+    <string>Array</string>
+   </property>
+   <property name="toolTip">
+    <string>Launch a blank Array Visualizer.</string>
+   </property>
+  </action>
+  <action name="actionViewMemoryVisualizer">
+   <property name="icon">
+    <iconset resource="SeeDataStructureRc.qrc">
+     <normaloff>:/resources/memory.png</normaloff>:/resources/memory.png</iconset>
+   </property>
+   <property name="text">
+    <string>Memory Visualizer</string>
+   </property>
+   <property name="statusTip">
+    <string>Launch a blank Memory Visualizer.</string>
+   </property>
+  </action>
+  <action name="actionViewArrayVisualizer">
+   <property name="icon">
+    <iconset resource="SeeDataStructureRc.qrc">
+     <normaloff>:/resources/array.png</normaloff>:/resources/array.png</iconset>
+   </property>
+   <property name="text">
+    <string>Array Visualizer</string>
+   </property>
+   <property name="statusTip">
+    <string>Launch a blank Array Visualizer.</string>
+   </property>
+  </action>
+  <action name="actionControlRun">
+   <property name="icon">
+    <iconset resource="SeeDataStructureRc.qrc">
+     <normaloff>:/resources/restart.png</normaloff>:/resources/restart.png</iconset>
+   </property>
+   <property name="text">
+    <string>Run</string>
+   </property>
+   <property name="toolTip">
+    <string>Run</string>
+   </property>
+   <property name="statusTip">
+    <string>Start the program in GDB. Honor breakpoints, if any.</string>
+   </property>
+  </action>
+  <action name="actionControlStart">
+   <property name="icon">
+    <iconset resource="SeeDataStructureRc.qrc">
+     <normaloff>:/resources/restart.png</normaloff>:/resources/restart.png</iconset>
+   </property>
+   <property name="text">
+    <string>Start</string>
+   </property>
+   <property name="toolTip">
+    <string>Start</string>
+   </property>
+   <property name="statusTip">
+    <string>Start the program in GDB. Stop in main().</string>
+   </property>
+  </action>
+  <action name="actionControlContinue">
+   <property name="icon">
+    <iconset resource="SeeDataStructureRc.qrc">
+     <normaloff>:/resources/continue.png</normaloff>:/resources/continue.png</iconset>
+   </property>
+   <property name="text">
+    <string>Continue</string>
+   </property>
+   <property name="toolTip">
+    <string>Continue</string>
+   </property>
+   <property name="statusTip">
+    <string>Continue executing the program. Stop at any breakpoints, or when the program exits.</string>
+   </property>
+  </action>
+  <action name="actionControlNext">
+   <property name="icon">
+    <iconset resource="SeeDataStructureRc.qrc">
+     <normaloff>:/resources/step_over.png</normaloff>:/resources/step_over.png</iconset>
+   </property>
+   <property name="text">
+    <string>Next</string>
+   </property>
+   <property name="toolTip">
+    <string>Next</string>
+   </property>
+   <property name="statusTip">
+    <string>Execute next step, step over functions.</string>
+   </property>
+  </action>
+  <action name="actionControlStep">
+   <property name="icon">
+    <iconset resource="SeeDataStructureRc.qrc">
+     <normaloff>:/resources/step_into.png</normaloff>:/resources/step_into.png</iconset>
+   </property>
+   <property name="text">
+    <string>Step</string>
+   </property>
+   <property name="toolTip">
+    <string>Step</string>
+   </property>
+   <property name="statusTip">
+    <string>Execute next step, step into functions.</string>
+   </property>
+  </action>
+  <action name="actionControlFinish">
+   <property name="icon">
+    <iconset resource="SeeDataStructureRc.qrc">
+     <normaloff>:/resources/step_out.png</normaloff>:/resources/step_out.png</iconset>
+   </property>
+   <property name="text">
+    <string>Finish</string>
+   </property>
+   <property name="toolTip">
+    <string>Finish</string>
+   </property>
+   <property name="statusTip">
+    <string>Execute the remaining function, stop after it exits.</string>
+   </property>
+  </action>
+  <action name="actionControlInterrupt">
+   <property name="icon">
+    <iconset resource="SeeDataStructureRc.qrc">
+     <normaloff>:/resources/stop.png</normaloff>:/resources/stop.png</iconset>
+   </property>
+   <property name="text">
+    <string>Interrupt</string>
+   </property>
+   <property name="toolTip">
+    <string>Interrupt</string>
+   </property>
+   <property name="statusTip">
+    <string>Send a 'Terminate' signal to the process.</string>
+   </property>
+  </action>
+  <action name="actionSettingsConfiguration">
+   <property name="icon">
+    <iconset resource="SeeDataStructureRc.qrc">
+     <normaloff>:/resources/arguments.png</normaloff>:/resources/arguments.png</iconset>
+   </property>
+   <property name="text">
+    <string>Configuration...</string>
+   </property>
+   <property name="statusTip">
+    <string>Configure Seer.</string>
+   </property>
+  </action>
+  <action name="actionSettingsSaveConfiguration">
+   <property name="icon">
+    <iconset resource="SeeDataStructureRc.qrc">
+     <normaloff>:/resources/RelaxLightIcons/document-save.svg</normaloff>:/resources/RelaxLightIcons/document-save.svg</iconset>
+   </property>
+   <property name="text">
+    <string>Save Configuration...</string>
+   </property>
+   <property name="statusTip">
+    <string>Save the configurations so future Seer sessions will use them.</string>
+   </property>
+  </action>
+  <action name="actionConsoleNormal">
+   <property name="icon">
+    <iconset>
+     <normaloff>:/seer/resources/maximize.png</normaloff>:/seer/resources/maximize.png</iconset>
+   </property>
+   <property name="text">
+    <string>Normal</string>
+   </property>
+   <property name="statusTip">
+    <string>Show the console window.</string>
+   </property>
+  </action>
+  <action name="actionConsoleHidden">
+   <property name="icon">
+    <iconset>
+     <normaloff>:/seer/resources/hide.png</normaloff>:/seer/resources/hide.png</iconset>
+   </property>
+   <property name="text">
+    <string>Hidden</string>
+   </property>
+   <property name="statusTip">
+    <string>Hide the console window.</string>
+   </property>
+  </action>
+  <action name="actionConsoleMinimized">
+   <property name="icon">
+    <iconset>
+     <normaloff>:/seer/resources/minimize.png</normaloff>:/seer/resources/minimize.png</iconset>
+   </property>
+   <property name="text">
+    <string>Minimized</string>
+   </property>
+   <property name="statusTip">
+    <string>Minimize the console window.</string>
+   </property>
+  </action>
  </widget>
- <resources/>
+ <customwidgets>
+  <customwidget>
+   <class>GdbWidget</class>
+   <extends>QWidget</extends>
+   <header>gdbwidget.h</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
+ <resources>
+  <include location="SeeDataStructureRc.qrc"/>
+ </resources>
  <connections/>
 </ui>
